Implementada data de publicação no retorno definitivo